# NdkDemo1

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/douliu/ndkdemo1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c  native.h
app/src/main/java/com/douliu/ndkdemo1/: FileUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/douliu/ndkdemo1/: ExampleUnitTest.java
